# patlint

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  env.sample  patent-checker-api.spec  patlint-api.spec  pyproject.toml
.github/workflows/: build-windows-exe.yml
docs/: design.md  development.md  iis.md  memo.md  rules.md  setup.md
office-addin/: manifest.xml
office-addin-vsto/: PatlintAddin.csproj  PatlintAddin.sln  README.md  ThisAddIn.cs
office-addin-vsto/Models/: CheckResponse.cs
office-addin-vsto/PatlintAddin/: PatlintAddin.csproj  PatlintAddin_TemporaryKey.pfx  Ribbon.cs  Ribbon.xml  ThisAddIn.Designer.cs  ThisAddIn.Designer.xml  ThisAddIn.cs  app.config
office-addin-vsto/PatlintAddin/Models/: CheckResponse.cs
office-addin-vsto/PatlintAddin/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs  Settings.settings
office-addin-vsto/PatlintAddin/Services/: ApiClient.cs  WordJumpService.cs
office-addin-vsto/PatlintAddin/TaskPane/: TaskPaneControl.xaml  TaskPaneControl.xaml.cs
office-addin-vsto/Properties/: Settings.Designer.cs  Settings.settings
office-addin-vsto/Services/: ApiClient.cs  WordJumpService.cs
office-addin-vsto/TaskPane/: TaskPaneControl.xaml.cs
scripts/: build-windows-exe.ps1
src/patent_checker_common/: __init__.py  models.py
src/patent_document_checker/: __init__.py  api.py  claim_parser.py  cli.py  data_paths.py  diagnostic_view.py  engine.py  parser.py  report.py  rules.py  server.py  structured_parser.py  terms.py  units.py
src/patent_document_checker/addin/: taskpane.css  taskpane.html  taskpane.js
src/patent_document_checker/ai/: __init__.py  anonymizer.py  client.py  converter.py  prompts.py  review.py
src/patent_document_checker/report/: __init__.py  reference_signs.py  renderer.py  sections.py
src/patent_document_checker/rules/: __init__.py  abstract.py  claim_dependencies.py  claim_numbering.py  claim_term_reference.py  claim_terms_in_sections.py  common.py  engine.py  figures.py  forbidden_characters.py  (+5 more)
tests/: test_api.py  test_claim_parser.py  test_cli.py  test_data_paths.py  test_document_checker.py  test_report.py  test_rule_claims.py  test_rule_figures.py  test_rule_invention_title.py  test_rule_paragraphs.py  test_rule_terms.py  test_rule_wording.py  test_server.py  test_structured_parser.py  test_term_extraction.py  test_units.py  test_word_addin.py
units/: custom_units.json  non_si_units.json  si_units.json
words/: custom-terms-sample.txt  default-terms.txt  default.json  extra.txt  patterns.py
(+13 files in other folders)
