[project]
name = "patent-checker"
version = "0.1.0"
description = "Patent Document Checker MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
patent-document-checker = "patent_document_checker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/patent_checker_common", "src/patent_document_checker"]
artifacts = ["words", "units"]

[tool.hatch.build.targets.wheel.force-include]
"words" = "words"
"units" = "units"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
