[project]
name = "patlint"
version = "1.0.3"
description = "Patent Document Checker MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
exe = ["pyinstaller>=6.0"]

[project.scripts]
patlint = "patent_document_checker.cli:main"
patlint-api = "patent_document_checker.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/patent_checker_common", "src/patent_document_checker"]
artifacts = ["words", "units"]

[tool.hatch.build.targets.wheel.force-include]
"words" = "words"
"units" = "units"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
